force-app/main/default/objects/CampaignAction__c/CampaignAction__c.object-meta.xml
<CustomObject>
    <description>佐野</description>
    <label>促進キャンペーン</label>
    <nameField>
        <label>促進キャンペーン名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>