force-app/main/default/objects/CampaignAction__c/fields/AdministrativeReports__c.field-meta.xml
<CustomField>
    <fullName>AdministrativeReports__c</fullName>
    <description>佐野</description>
    <label>管理用レポート貼り付け用</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>