force-app/main/default/objects/CampaignAction__c/fields/BehavioralGoalAchievementRate__c.field-meta.xml
<CustomField>
    <fullName>BehavioralGoalAchievementRate__c</fullName>
    <description>行動件数/行動目標件数
佐野</description>
    <formula>NumberOfCampaignActions__c / NumberOfActionGoals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>行動目標達成率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>