force-app/main/default/objects/CampaignAction__c/fields/CampaignManager__c.field-meta.xml
<CustomField>
    <fullName>CampaignManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>佐野</description>
    <label>キャンペーン責任者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CampaignUser</relationshipName>
    <type>Lookup</type>
</CustomField>