force-app/main/default/objects/CampaignAction__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>佐野</description>
    <inlineHelpText>キャンペーンの終了日・終了予定日</inlineHelpText>
    <label>終了日</label>
    <type>Date</type>
</CustomField>