force-app/main/default/objects/CampaignAction__c/fields/Explanation__c.field-meta.xml
<CustomField>
    <fullName>Explanation__c</fullName>
    <description>佐野</description>
    <label>説明</label>
    <type>TextArea</type>
</CustomField>