force-app/main/default/objects/CampaignAction__c/fields/FlyerAndDocumentURL__c.field-meta.xml
<CustomField>
    <fullName>FlyerAndDocumentURL__c</fullName>
    <description>佐野</description>
    <inlineHelpText>ドライブに入れた提案資料・チラシのURLを貼り付け</inlineHelpText>
    <label>チラシ/資料URL</label>
    <type>Url</type>
</CustomField>