force-app/main/default/objects/CampaignAction__c/fields/NumberOfActionGoals__c.field-meta.xml
<CustomField>
    <fullName>NumberOfActionGoals__c</fullName>
    <description>佐野</description>
    <label>行動目標件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>