force-app/main/default/objects/CampaignAction__c/fields/NumberOfCampaignActions__c.field-meta.xml
<CustomField>
    <fullName>NumberOfCampaignActions__c</fullName>
    <defaultValue>0</defaultValue>
    <description>佐野</description>
    <label>キャンペーン行動数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>