force-app/main/default/objects/CampaignAction__c/fields/NumberOfCampaignContacts__c.field-meta.xml
<CustomField>
    <fullName>NumberOfCampaignContacts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>佐野</description>
    <label>キャンペーン取引先担当者数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>