force-app/main/default/objects/CampaignAction__c/fields/NumberOfCampaignPartners__c.field-meta.xml
<CustomField>
    <fullName>NumberOfCampaignPartners__c</fullName>
    <defaultValue>0</defaultValue>
    <description>佐野</description>
    <label>キャンペーン取引先数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>