force-app/main/default/objects/CampaignAction__c/fields/NumberOfRegisteredEventPlans__c.field-meta.xml
<CustomField>
    <fullName>NumberOfRegisteredEventPlans__c</fullName>
    <defaultValue>0</defaultValue>
    <description>佐野</description>
    <inlineHelpText>今日以降の行動予定数</inlineHelpText>
    <label>登録済みの行動予定件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>