force-app/main/default/objects/CampaignAction__c/fields/ParentCampaign__c.field-meta.xml
<CustomField>
    <fullName>ParentCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>佐野
レポート表示用の親キャンペーンを紐づけ</description>
    <label>親キャンペーン</label>
    <referenceTo>CampaignAction__c</referenceTo>
    <relationshipLabel>促進キャンペーン</relationshipLabel>
    <relationshipName>CampaignAction</relationshipName>
    <type>Lookup</type>
</CustomField>