force-app/main/default/objects/CampaignAction__c/fields/ParentCampaignFlag__c.field-meta.xml
<CustomField>
    <fullName>ParentCampaignFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>佐野</description>
    <label>親キャンペーンフラグ</label>
    <type>Checkbox</type>
</CustomField>