force-app/main/default/objects/CampaignAction__c/fields/Situation__c.field-meta.xml
<CustomField>
    <fullName>Situation__c</fullName>
    <description>佐野</description>
    <label>状況</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>計画中</fullName>
                <default>true</default>
                <label>計画中</label>
            </value>
            <value>
                <fullName>進行中</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>