force-app/main/default/objects/CampaignAction__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>佐野</description>
    <inlineHelpText>キャンペーンの開始日を入力</inlineHelpText>
    <label>開始日</label>
    <type>Date</type>
</CustomField>